--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/shangrex/No_Game#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "phaser": "^3.55.2",
     "react": "^17.0.2"
   }
 }
